--- a/app/globals.css
+++ b/app/globals.css
@@ -7,3 +7,12 @@
     text-wrap: balance;
   }
 }
+
+.fade-out-mask {
+  -webkit-mask-image: linear-gradient(
+    to bottom,
+    rgba(0, 0, 0, 1),
+    rgba(0, 0, 0, 0)
+  );
+  mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
+}
